--- a/mainQuizApp/templates/mainQuizApp/login.html
+++ b/mainQuizApp/templates/mainQuizApp/login.html
@@ -81,7 +81,7 @@
         <img class="mb-4" src="{% static 'mainQuizApp/png/logo.png' %}" alt="" width="72" height="57">
         <h1 class="h3 mb-3 fw-normal">Авторизация</h1>
 
-        {{ form.as_div }}
+        {{ form }}
         <div class="checkbox mb-3">
             <label>
                 <input type="checkbox" value="remember-me"> Запомнить меня
