--- a/mainQuizApp/templates/mainQuizApp/base.html
+++ b/mainQuizApp/templates/mainQuizApp/base.html
@@ -25,7 +25,7 @@
                 <a href="/admin" class="btn btn-danger me-2">Admin panel</a>
                 {% endif %}
                 <a href="{% url 'logout' %}" class="btn btn-outline-light me-2">Logout</a>
-                <a href="{% url 'tests' %}" class="btn btn-warning">My tests</a>
+                <a href="{% url 'mytests' %}" class="btn btn-warning">My tests</a>
 
             </div>
             {% else %}
