added quiz finish

--- a/mainQuizApp/templates/mainQuizApp/base.html
+++ b/mainQuizApp/templates/mainQuizApp/base.html
@@ -31,7 +31,7 @@
             {% else %}
             <div class="text-end">
                 <a href="{% url 'login' %}" class="btn btn-outline-light me-2">Login</a>
-                <button type="button" class="btn btn-warning">Sign-up</button>
+                <a href="{% url 'register' %}" class="btn btn-warning">Sign-up</a>
             </div>
             {% endif %}
         </div>
