--- a/mainQuizApp/templates/mainQuizApp/register.html
+++ b/mainQuizApp/templates/mainQuizApp/register.html
@@ -1,104 +1,71 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
-    <meta name="generator" content="Hugo 0.98.0">
-    <title>Signin Template · Bootstrap v5.2</title>
-
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/sign-in/">
-
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-
-    <style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        user-select: none;
-      }
-
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
-
-      .b-example-divider {
-        height: 3rem;
-        background-color: rgba(0, 0, 0, .1);
-        border: solid rgba(0, 0, 0, .15);
-        border-width: 1px 0;
-        box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
-      }
-
-      .b-example-vr {
-        flex-shrink: 0;
-        width: 1.5rem;
-        height: 100vh;
-      }
-
-      .bi {
-        vertical-align: -.125em;
-        fill: currentColor;
-      }
-
-      .nav-scroller {
-        position: relative;
-        z-index: 2;
-        height: 2.75rem;
-        overflow-y: hidden;
-      }
-
-      .nav-scroller .nav {
-        display: flex;
-        flex-wrap: nowrap;
-        padding-bottom: 1rem;
-        margin-top: -1px;
-        overflow-x: auto;
-        text-align: center;
-        white-space: nowrap;
-        -webkit-overflow-scrolling: touch;
-      }
-
-    </style>
-
-
-    <!-- Custom styles for this template -->
     {% load static %}
-    <link href="{% static 'mainQuizApp/css/signin.css'  %}" rel="stylesheet">
+    <meta charset="utf-8">
+    <title>Регистрация</title>
+    <!-- Mobile Specific Metas -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
+    <link href="{% static 'mainQuizApp/css/register.css' %}" rel="stylesheet">
 </head>
-<body class="text-center">
+<body class="form-v5">
+<div class="page-content">
+    <div class="form-v5-content">
 
-<main class="form-signin w-100 m-auto">
-    <form>
-        <img class="mb-4" src="../assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
-        <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+        <form class="form-detail" action="" method="post">
+            {% csrf_token %}
+            <center><h3>Регистрация</h3></center>
+            {{ form.as_p }}
 
-        <div class="form-floating">
-            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-            <label for="floatingInput">Email address</label>
-        </div>
-        <div class="form-floating">
-            <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-            <label for="floatingPassword">Password</label>
-        </div>
-
-        <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" value="remember-me"> Remember me
-            </label>
-        </div>
-        <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
-        <p class="mt-5 mb-3 text-muted">&copy; 2017–2022</p>
-    </form>
-</main>
-
-
+            <!--
+             <div class="form-row">
+                <label for="full-name">Полное имя</label>
+                <input type="text" name="name" id="full-name" class="input-text" placeholder="Иванов Иван aka Vanya228"
+                       value="{% if name %}{{name}}{% endif %}"
+                       required>
+                <i class="fas fa-user"></i>
+            </div>
+            <div class="form-row">
+                <label for="your-email">Email</label>
+                <input type="email" name="email" id="your-email" class="input-text" placeholder="vanya228@example.com"
+                       value="{% if email %}{{email}}{% endif %}"
+                       required pattern="[^@]+@[^@]+.[a-zA-Z]{2,6}">
+                <i class="fas fa-envelope"></i>
+            </div>
+            <div class="form-row">
+                <label for="psw">Пароль</label>
+                <input type="password" name="psw" id="psw" class="input-text" placeholder="qwerty"
+                       value="{% if psw %}{{psw}}{% endif %}" required>
+                <i class="fas fa-lock"></i>
+            </div>
+            <div class="form-row">
+                <label for="psw2">Повторите пароль</label>
+                <input type="password" name="psw2" id="psw2" class="input-text" placeholder="qwerty"
+                       value="{% if psw2 %}{{psw2}}{% endif %}" required>
+                <i class="fas fa-lock"></i>
+            </div>
+            -->
+            <div class="form-row-last">
+                <input type="submit" name="register" class="register" value="Далее">
+            </div>
+            {% if messages %}
+        <ul class="messages">
+            {% for message in messages %}
+            <li
+            {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+            {% endfor %}
+        </ul>
+        {% endif %}
+            <div class="login-or">
+                <hr class="hr-or">
+            </div>
+            <br>
+            <div class="bottom text-center">
+                <center>Есть аккаунт? <a href="{% url 'login' %}"><b>Авторизируйся!</b></a></center>
+            </div>
+        </form>
+    </div>
+</div>
 </body>
 </html>
