reworked admin menu, added tests erros check interface

--- a/mainQuizApp/templates/mainQuizApp/test_result.html
+++ b/mainQuizApp/templates/mainQuizApp/test_result.html
@@ -2,41 +2,69 @@
 {% block title %}{{title}}{% endblock %}
 
 {% block content %}
-<script>
-  const quizData = [
-  {% for question_dict in test_array %}
-  {
-    question:`{{ question_dict.question|safe}}`,
-    a: `{{ question_dict.answer1|safe }}`,
-    b: `{{ question_dict.answer2|safe }}`,
-    c: `{{ question_dict.answer3|safe }}`,
-    d: `{{ question_dict.answer4|safe }}`,
-    e: `{{ question_dict.answer5|safe }}`,
-    correct: '{{ question_dict.correct_answer }}',
-  },
-  {% endfor %}
-  ];
-</script>
-{% if test_array %}
+
 
 {% for question_dict in test_array %}
-<ul class="list-group">
-  <li class="list-group-item list-group-item-action">{{ question_dict.question|safe }}</li>
-  <li class="list-group-item list-group-item-action">{{ question_dict.answer1|safe }}</li>
-  <li class="list-group-item list-group-item-action">{{ question_dict.answer2|safe }}</li>
-  <li class="list-group-item list-group-item-action">{{ question_dict.answer3|safe }}</li>
-  <li class="list-group-item list-group-item-action">{{ question_dict.answer4|safe }}</li>
-  <li class="list-group-item list-group-item-action">{{ question_dict.answer5|safe }}</li>
+    {% if question_dict.user_answer == question_dict.correct_answer%}
+    <ul class="list-group" style="box-shadow: -10px 10px 20px rgba(79, 248, 88, 0.8);">
+    <li class="list-group-item list-group-item-action list-group-item-success">{{ question_dict.question|safe }}</li>
+    {% else %}
+      <ul class="list-group" style="box-shadow: -5px 5px 10px rgba(236, 53, 53, 0.8);">
+      <li class="list-group-item list-group-item-action list-group-item-danger">{{ question_dict.question|safe }}</li>
+    {% endif %}
+
+  {% if question_dict.correct_answer == "a" %}
+  <li class="list-group-item list-group-item-action list-group-item-success">{{ question_dict.answer1|safe }}</li>
+  {% else %}
+  {% if question_dict.user_answer == "a" %}
+    <li class="list-group-item list-group-item-action list-group-item-danger">{{ question_dict.answer1|safe }}</li>
+  {% else %}
+      <li class="list-group-item list-group-item-action">{{ question_dict.answer1|safe }}</li>
+  {% endif %}
+  {% endif %}
+
+  {% if question_dict.correct_answer == "b" %}
+  <li class="list-group-item list-group-item-action list-group-item-success">{{ question_dict.answer2|safe }}</li>
+  {% else %}
+  {% if question_dict.user_answer == "b" %}
+    <li class="list-group-item list-group-item-action list-group-item-danger">{{ question_dict.answer2|safe }}</li>
+  {% else %}
+      <li class="list-group-item list-group-item-action">{{ question_dict.answer2|safe }}</li>
+  {% endif %}
+  {% endif %}
+
+  {% if question_dict.correct_answer == "c" %}
+  <li class="list-group-item list-group-item-action list-group-item-success">{{ question_dict.answer3|safe }}</li>
+  {% else %}
+  {% if question_dict.user_answer == "c" %}
+    <li class="list-group-item list-group-item-action list-group-item-danger">{{ question_dict.answer3|safe }}</li>
+  {% else %}
+      <li class="list-group-item list-group-item-action">{{ question_dict.answer3|safe }}</li>
+  {% endif %}
+  {% endif %}
+
+  {% if question_dict.correct_answer == "d" %}
+  <li class="list-group-item list-group-item-action list-group-item-success">{{ question_dict.answer4|safe }}</li>
+  {% else %}
+  {% if question_dict.user_answer == "d" %}
+    <li class="list-group-item list-group-item-action list-group-item-danger">{{ question_dict.answer4|safe }}</li>
+  {% else %}
+      <li class="list-group-item list-group-item-action">{{ question_dict.answer4|safe }}</li>
+  {% endif %}
+  {% endif %}
+
+  {% if question_dict.correct_answer == "e" %}
+  <li class="list-group-item list-group-item-action list-group-item-success">{{ question_dict.answer5|safe }}</li>
+  {% else %}
+  {% if question_dict.user_answer == "e" %}
+    <li class="list-group-item list-group-item-action list-group-item-danger">{{ question_dict.answer5|safe }}</li>
+  {% else %}
+      <li class="list-group-item list-group-item-action">{{ question_dict.answer5|safe }}</li>
+  {% endif %}
+  {% endif %}
 </ul>
-
-
-<br>
-<br>
-<br>
 <br>
 <br>
 {% endfor %}
-{% else %}
-There is some problem, u have u tell about it to the developer. :(
-{% endif %}
+
 {% endblock %}
