--- a/mainQuizApp/templates/mainQuizApp/test_config.html
+++ b/mainQuizApp/templates/mainQuizApp/test_config.html
@@ -17,6 +17,10 @@
             <input type="number" class="form-control" id="upperDiapason" value="{{ file.questions_count }}"
                    name="upper_diapason">
 
+            <label for="questionCount" class="form-label">questionCount</label>
+            <input type="number" class="form-control" id="questionCount" value="25"
+                   name="question_count">
+
             <input class="form-check-input" type="checkbox" value="" id="randomCheck" name="is_random">
             <label class="form-check-label" for="randomCheck">
                 Randomize questions
