--- a/mainQuizApp/templates/mainQuizApp/mytests.html
+++ b/mainQuizApp/templates/mainQuizApp/mytests.html
@@ -59,7 +59,8 @@
 
 {% if finished_tests %}
 <div class="p-5 mb-4 bg-light rounded-3">
-    <h1 class="display-6 fw-bold">Завершенные тесты</h1>
+    <h1 class="display-6 fw-bold">Последние завершенные тесты</h1>
+    <small>P.S. История тестов хранит в себе только последние 5 завершенных тестов ради экономии памяти в нашей драгоценной базе данных. </small>
     <div class="list-group">
         {% for test in finished_tests %}
         <a href="{% url 'test_result_view' test.pk %}" class="list-group-item list-group-item-action">
@@ -68,17 +69,17 @@
                 <small class="text-muted">Завершено: {{ test.finished_at }}</small>
             </div>
 
-            <p class="mb-1">Вопросов: {{ test.question_count }}</p>
-            <small class="text-muted">Вы ответили на {{ test.result }}/{{ test.question_count }}. Это:
-                <span id="percentage"></span>/100%
+            <p class="mb-1">
+                Вы ответили на {{ test.result }}/{{ test.question_count }}. Это:
                 <script>
-    const result = {{ test.result }};
-    const questionCount = {{ test.question_count }};
-    const percentage = (result / questionCount) * 100;
-    document.getElementById('percentage').innerText = percentage.toFixed(1);
-
+                    var result = {{ test.result }};
+                    var questionCount = {{ test.question_count }};
+                    var percentage = (result / questionCount) * 100;
+                    document.write(percentage.toFixed(1));
                 </script>
-            </small>
+                %
+            </p>
+
         </a>
         {% endfor%}
 
