--- a/mainQuizApp/templates/mainQuizApp/test_config.html
+++ b/mainQuizApp/templates/mainQuizApp/test_config.html
@@ -24,7 +24,8 @@
             <input class="form-check-input" type="checkbox" value="" id="randomCheck" name="is_random">
             <label class="form-check-label" for="randomCheck">
                 Randomize questions
-            </label> <br>
+            </label>
+            <br>
             <button class="btn btn-primary btn-lg" type="submit">Start
             </button>
 
