--- a/mainQuizApp/static/mainQuizApp/css/main.css
+++ b/mainQuizApp/static/mainQuizApp/css/main.css
@@ -17,7 +17,6 @@ body {
     background-color: #47c2ff;
     border: none;
     display: block;
-    max-width: 300px;
     max-height: 50px;
     font-size: 14px;
     font-weight: bold;
@@ -211,9 +210,9 @@ p {
 
 .leave-page {
     position: absolute;
-    width: 200px;
+    width: 100%;
     height: 60px;
-    top: 0;
+    bottom: 0;
     right: 0;
 }
 
@@ -272,11 +271,11 @@ p {
     }
 
     .correct {
-        box-shadow: inset 0px 0px 20px #31ff4d;
+        box-shadow: inset 0px 0px 50px #31ff4d;
     }
 
     .incorrect {
-        box-shadow: inset 0px 0px 20px #f1003c;
+        box-shadow: inset 0px 0px 50px #f1003c;
     }
 }
 
@@ -293,19 +292,23 @@ p {
         margin-top: 30%;
         position: absolute;
         bottom: 0;
+        max-height:100vh;
+
     }
 
     .quiz-header {
         padding: 10px;
-        max-height: 80vh;
+        min-height: 0vh;
+        max-height:100vh;
+        padding-bottom:5vh;
     }
 
     .correct {
-        box-shadow: inset 0px 0px 20px #31ff4d;
+        box-shadow: inset 0px 0px 50px #31ff4d;
     }
 
     .incorrect {
-        box-shadow: inset 0px 0px 20px #f1003c;
+        box-shadow: inset 0px 0px 50px #f1003c;
     }
 }
 
