--- a/mainQuizApp/templates/mainQuizApp/quiz_tester.html
+++ b/mainQuizApp/templates/mainQuizApp/quiz_tester.html
@@ -97,7 +97,8 @@
             </ul>
 
         </div>
-        <button id="mainBtn" class="leave-page good_btn">Ответить</button>
+        <button id="mainBtn" class="answer_btn good_btn">Ответить</button>
+        <button id="finish_btn" class="gpt_btn">Завершить тест</button>
 
     </div>
 </div>
