--- a/mainQuizApp/static/mainQuizApp/css/main.css
+++ b/mainQuizApp/static/mainQuizApp/css/main.css
@@ -27,6 +27,34 @@ body {
     border-radius: 7px;
 }
 
+/* стили для кнопки */
+.gpt_btn {
+  background-color: #47c2ff;
+  border: none;
+  display: block;
+  font-size: 14px;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: #000000;
+  padding: 15px 30px;
+  transition: all 0.1s ease;
+  border-radius: 7px;
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  z-index: 999;
+}
+
+/* медиа-запрос для адаптивного режима */
+@media only screen and (max-width: 767px) {
+  .gpt_btn {
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+  }
+}
+
 .areusure-btn {
     padding: 15px 30px;
     font-size: 14px;
@@ -208,7 +236,7 @@ p {
     display: inline;
 }
 
-.leave-page {
+.answer_btn {
     position: absolute;
     width: 100%;
     height: 60px;
@@ -259,7 +287,7 @@ p {
         bottom: 0;
     }
 
-    .leave-page {
+    .answer_btn {
         position: absolute;
         width: 100vw;
         height: 45px;
