title misstake fixed

--- a/mainQuizApp/templates/mainQuizApp/login.html
+++ b/mainQuizApp/templates/mainQuizApp/login.html
@@ -3,7 +3,7 @@
 <head>
     {% load static %}
     <meta charset="utf-8">
-    <title>Регистрация</title>
+    <title>Авторизация</title>
     <!-- Mobile Specific Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
