localstorage has been used

--- a/mainQuizApp/templates/mainQuizApp/index.html
+++ b/mainQuizApp/templates/mainQuizApp/index.html
@@ -1,5 +1,11 @@
 {% extends 'mainQuizApp/base.html' %}
 
 {% block content %}
-Main page
+<h3>
+    Тут будет лог обновлений
+</h3>
+<p>Обновлен функционал тестирования.</p>
+<p>Добавлена возможность удалять файлы.</p>
+<p>Добавлена возможность принудительно завершить тест.</p>
+<p>Прогресс теста кэшируется в бразуер, благодаря чему есть возможность допройти тест позже.</p>
 {% endblock %}
