--- a/mainQuizApp/templates/mainQuizApp/index.html
+++ b/mainQuizApp/templates/mainQuizApp/index.html
@@ -7,4 +7,5 @@
 <p>Обновлен функционал тестирования.</p>
 <p>Добавлена возможность удалять файлы.</p>
 <p>Добавлена возможность принудительно завершить тест.</p>
+<p>Прогресс теста кэшируется в бразуер, благодаря чему есть возможность допройти тест позже.</p>
 {% endblock %}
