--- a/mainQuizApp/templates/mainQuizApp/index.html
+++ b/mainQuizApp/templates/mainQuizApp/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <h3>
-    Тут будет лог обновлений
+    Тут будет лог обновлений.
 </h3>
 <p>Обновлен функционал тестирования.</p>
 <p>Добавлена возможность удалять файлы.</p>
